webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook

# specification
spec:
  # 副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook # must match (1)

  # template 描述的是你的 POD 是什么样的
  template:
    metadata:
      labels:
        app: webook
    # POD 的具体信息
    spec:
      containers:
        - name: webook # (1)
          image: xjiang91/webook:v0.0.1
          imagePullPolicy: Always # Always pull image for development purpuse
          ports:
            - containerPort: 8080
          resources: # It is a good practice to declare resource requests and limits for both memory and cpu for each container
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
