webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 81 # 浏览器访问webook时用的端口
      targetPort: 8080 # 必须对应webook-deployment中的containerPort
