webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  #  use nginx
  ingressClassName: nginx
  rules:
    # 当 host 是 live.webook.com 的时候，命中我这条
    - host: live.webook.com
      # also remember to add to /etc/hosts the folowing: <service EXTERNAL-IP> live.webook.com
      http:
        paths:
          #          - 请求路径的前缀是 / 的时候
          #          - 将流量转发过去后面的 webook 服务上
          #          - 端口是 81
          - backend:
              service:
                name: webook # must be the same as the service name defined in k8s-webook-service.yaml
                port:
                  number: 81 # must be the same as the service port defined in k8s-webook-service.yaml
            pathType: Prefix
            path: /
